@@ -25,6 +25,7 @@ Connect to MongoDB
    Create a MongoClient </connect-to-mongo/create-a-mongo-client/>
    Choose a Connection Target </connect-to-mongo/choose-connection-target/>
    Connection URI Options </connect-to-mongo/connection-options/>
+   Limit Execution Time </connect-to-mongo/csot>
    TLS/SSL </connect-to-mongo/tls/>
    Compress Network Traffic </connect-to-mongo/network-compression>
    Stable API </connect-to-mongo/stable-api/>
