@@ -93,6 +93,13 @@ manage your transaction:
          this method, see the :manual:`commitTransaction() page
          </reference/method/Session.commitTransaction/>`  in the {+mdb-server+} manual.
 
+.. tip:: Transaction Timeout
+
+   You can set a limit on amount of time that operations can take
+   to complete in your transactions. To learn more, see the
+   :ref:`java-rs-csot-transaction` section of the Limit Server Execution
+   Time guide.
+
 Transaction Example
 -------------------
 
